--- a/src/components/FilesSelectionContainer/FilesSelectionContainer.css
+++ b/src/components/FilesSelectionContainer/FilesSelectionContainer.css
@@ -2,3 +2,13 @@
   justify-content: space-between !important;
   width: 100%;
 }
+
+.buttons-stack {
+  display: flex !important;
+  justify-content: center;
+  margin: 8px 0;
+}
+
+a {
+  text-decoration: none;
+}
